syntax = "proto3";

package passport;

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/webbsalad/storya-passport-backend/passport;passport";

message Passport {
    string name = 1 [(validate.rules).string = {
        min_len: 3,
        max_len: 30
    }];

    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
}
